# double-pendulum

./: LICENSE  README.md  double-pendulum.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
