name:                double-pendulum
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GintMist/double-pendulum
license:             BSD3
license-file:        LICENSE
author:              Gint Mist
maintainer:          themistghillein@gmail.com
copyright:           2017 Gint Mist
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , gloss >= 1.8
  default-language:    Haskell2010

executable double-pendulum-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , double-pendulum
  default-language:    Haskell2010

test-suite double-pendulum-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , double-pendulum
                     , QuickCheck >= 2.9.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GintMist/double-pendulum
